feat: add message pinning
