# message-service/src/main/java/messenger/messageservice/api/MessageController.java
@@ -1,10 +1,12 @@
 package messenger.messageservice.api;
 
 import jakarta.validation.Valid;
+import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.Positive;
 import lombok.RequiredArgsConstructor;
 import messenger.commonlibs.dto.messageservice.MessageAccessInfoDto;
 import messenger.commonlibs.dto.messageservice.MessageDto;
+import messenger.commonlibs.dto.messageservice.PinMessageDto;
 import messenger.messageservice.api.dto.CreateMessage;
 import messenger.messageservice.api.dto.MessageEditDto;
 import messenger.messageservice.api.dto.MessageResponse;
@@ -18,6 +20,8 @@ import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import java.time.Instant;
+import java.util.List;
+
 import static messenger.commonlibs.Constants.USER_ID_HEADER;
 
 @Validated
@@ -46,6 +50,13 @@ public class MessageController {
         return ResponseEntity.status(HttpStatus.ACCEPTED).body(messageService.saveAndPublish(dto));
     }
 
+    @PostMapping("/pin/{messageId}")
+    public ResponseEntity<Void> pinMessage(@RequestHeader(USER_ID_HEADER) Long userId,
+                                           @PathVariable @NotBlank String messageId) {
+        messageService.pinMessageById(userId, messageId);
+        return ResponseEntity.status(HttpStatus.CREATED).build();
+    }
+
     @GetMapping("/chat/{chatId}")
     public ResponseEntity<Slice<MessageResponse>> paginationMessages(@RequestHeader(USER_ID_HEADER) Long userId,
                                                              @PathVariable @Positive Long chatId,
@@ -66,6 +77,18 @@ public class MessageController {
         return ResponseEntity.ok(messageService.getMessageAccessInfo(userId, messageId));
     }
 
+    @GetMapping("/chat/{chatId}/pins")
+    public ResponseEntity<List<PinMessageDto>> getPinnedMessages(@RequestHeader(USER_ID_HEADER) Long userId,
+                                                                 @PathVariable Long chatId) {
+        return ResponseEntity.ok(messageService.getPinnedMessageByChatId(userId, chatId).stream()
+                .map(pinnedMessage -> new PinMessageDto(
+                        pinnedMessage.getChatId(),
+                        pinnedMessage.getMessageId(),
+                        pinnedMessage.getMessageSendAt(),
+                        pinnedMessage.getPinnedByUserId()
+                )).toList());
+    }
+
     @PutMapping("/edit")
     public ResponseEntity<MessageDto> editMessageById(@RequestHeader(USER_ID_HEADER) Long userId,
                                                            @Valid @RequestBody MessageEditDto dto) {
@@ -84,6 +107,13 @@ public class MessageController {
                                                   @Valid @RequestBody MessageReadListDto dto) {
         messageService.readMessageByList(userId, dto);
         return ResponseEntity.ok().build();
+    }
+
+    @DeleteMapping("/unpin/{messageId}")
+    public ResponseEntity<Void> unpinMessage(@RequestHeader(USER_ID_HEADER) Long userId,
+                                             @PathVariable @NotBlank String messageId) {
+        messageService.unpinnedMessageById(userId, messageId);
+        return ResponseEntity.noContent().build();
     }
 
     @DeleteMapping("/{messageId}")
